trying to solve some layout bugs

--- a/components/AppImage/AppImage.css
+++ b/components/AppImage/AppImage.css
@@ -3,6 +3,7 @@
   border-radius: 25px;
   align-items: center;
   width: 950px;
+  margin-top: 12px;
   margin-bottom: 12px;
 }
 .appimage-box {
