--- a/components/AppInfo/AppInfo.css
+++ b/components/AppInfo/AppInfo.css
@@ -1,79 +1,41 @@
-.appinfo-container {
+.appInfo-container {
   display: flex;
   flex-direction: column;
-  margin-left: 18px;
-  margin-right: 18px;
-  margin-bottom: 1200px;
-}
-.appinfo-box {
   margin: 0 164px 0 164px;
+  width: 900px;
 }
-.appinfo-rating {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
-  margin-top: 18px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  justify-content: center;
-}
-.rating-child {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-}
-.rating-text {
-  font-size: 14px;
-  font-weight: 400;
-  color: #333;
-  margin-bottom: 8px;
-}
-.app-name {
-  display: flex;
-  flex-direction: column;
-}
-.app-info {
+.appInfo-left {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
-.app-rating {
-  display: flex;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: bolder;
-  align-items: center;
-}
-.app-owner {
-  font-size: 16px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 600;
-}
-.appinfo-info {
+.appInfo-left-child {
   display: flex;
   flex-direction: column;
-  line-height: 1.2;
-  width: 100%;
+  margin-top: auto;
+  gap: 12px;
 }
-.app-title {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+.appName {
+  font-family: var(--font-serif);
   font-size: 3.5rem;
   line-height: 1.2;
   color: var(--text-color);
-  /* margin-bottom: 0.5rem; */
 }
-.debug-image {
-  display: flex;
-  margin-left: auto;
+.appPublisher {
+  font-family: var(--font-serif);
+  font-size: 16px;
+  font-weight: 600;
 }
-.appicon {
+.appIconMobile {
   width: 256px;
   height: 256px;
-  margin-right: 24px;
-  margin-left: 24px;
-  margin-top: 6px;
+  display: none;
 }
-.download-btn {
+.appData-area {
+  display: flex;
+  flex-direction: column;
+}
+.DownloadBtn {
   background-color: var(--hg-color);
   color: #fff;
   display: flex;
@@ -87,99 +49,37 @@
   height: 50px;
   transition: 0.3s;
 }
-.download-btn:hover {
+.DownloadBtn:hover {
   background-color: var(--hg-color-hover);
 }
-.download-text {
+.DownloadBtn-text {
   font-size: 16px;
 }
-.additional-area {
-  display: flex;
-  flex-direction: row;
-  gap: 6px;
-  align-items: center;
-  margin-top: 38px;
-}
-.compatibility-area {
-  display: flex;
-  border-radius: 10px;
-  flex-direction: row;
-  width: 270px;
-  height: 50px;
-  align-items: center;
-  gap: 12px;
-}
-.compatiblity-text {
-  font-size: 12px;
-  color: #333;
-  font-family: var(--font-regular);
-}
-.wishlist-btn {
-  color: #bbb;
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-  font-weight: 500;
-  cursor: not-allowed;
-  padding: 16px;
-  gap: 5px;
-  justify-content: center;
-  width: 150px;
-}
-.wishlist-text {
-  font-size: 16px;
-  font-weight: 500;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-.another-area {
-  display: flex;
-  flex-direction: column;
-}
+
 .div-loading {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
 }
 .loading-text {
   font-size: 16px;
   font-weight: 500;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
-  margin-left: 10px;
 }
 
 @media (max-width: 768px) {
-  .appinfo-box {
-    margin: 0 0px 0 0px;
+  .appInfo-container {
+    margin: 0;
+    width: 100%;
+    padding: 12px;
   }
-  .app-title {
+  .appName {
     font-size: 1.5rem;
-    line-height: 1.2;
   }
-  .appinfo-right {
+  .appIconMobile {
+    display: block;
     width: 128px;
     height: 128px;
-  }
-  .download-btn {
-    width: 120px;
-    height: 50px;
-  }
-  .appicon {
-    width: 128px;
-    height: 128px;
-  }
-  .another-area {
-    flex-direction: column;
-  }
-  .contact-image {
-    flex-direction: column;
-  }
-  .appinfo-info {
-    width: 100%;
-  }
-  .compatibility-area {
-    width: 100%;
   }
 }
