--- a/components/DataSecurity/DataSecurity.css
+++ b/components/DataSecurity/DataSecurity.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 0, 0, 0.02);
-  width: 920px;
+  width: 900px;
   margin-top: 12px;
   border-radius: 10px;
   border: 1px solid #e0e0e0;
@@ -72,7 +72,7 @@ a {
     width: 100%;
   }
   .security-rules {
-    width: 94%;
+    width: 95%;
   }
   .security-rule-list-item-icon {
     width: 24px;
